feat (add list query api)
1. query user/project/assignment/...
